-- Copyright (c) Microsoft. All rights reserved.
-- Licensed under the MIT license. See LICENSE file in the project root for full license information.

name:               gbc
version:            3.0.3.0
cabal-version:      >= 1.8
synopsis:           The Glorious Bond Compilation System
description:        gbc is Bond schema definition languange compiler and code
                    generator.
homepage:           https://github.com/Microsoft/bond
license:            MIT
author:             adamsap@microsoft.com
maintainer:         adamsap@microsoft.com
copyright:          Copyright (c) Microsoft. All rights reserved.
category:           Language
build-type:         Simple

test-suite gbc-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests, .
  main-is:          Main.hs
  other-modules:
  ghc-options:      -threaded
  build-depends:    aeson >= 0.7.0.6,
                    async >= 2.0.1.0,
                    base >=4.5,
                    bytestring >= 0.10,
                    cmdargs >= 0.10.10,
                    directory >= 1.1,
                    filepath >=1.0,
                    ghc-prim,
                    monad-loops >= 0.4,
                    mtl >= 2.1,
                    parsec >=3.1,
                    shakespeare >= 2.0,
                    text >=0.11,
                    derive,
                    HUnit,
                    QuickCheck,
                    Diff >= 0.2 && < 0.4,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2

executable gbc
  main-is:          Main.hs
  ghc-options:      -threaded -Wall -Werror
  other-modules:
  build-depends:    aeson >= 0.7.0.6,
                    async >= 2.0.1.0,
                    base >=4.5,
                    bytestring >= 0.10,
                    cmdargs >= 0.10.10,
                    directory >= 1.1,
                    filepath >=1.0,
                    ghc-prim,
                    monad-loops >= 0.4,
                    mtl >= 2.1,
                    parsec >=3.1,
                    shakespeare >= 2.0,
                    text >=0.11
